# pokemon

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pokemon/: api.py  app.py  battle.py  enums.py  models.py  schema.py  service.py
pokemon/pokeapi/: client.py  exceptions.py  schema.py
tests/data/: pokemon_data.py
tests/integration/: test_api.py  test_client.py
tests/integration/pokeapi/: test_client.py
tests/unit/: test_api.py  test_battle.py  test_schema.py
