[tool.poetry]
name = "pokemon"
version = "0.1.0"
description = "Pokemon api integration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
requests = "^2.28.2"
pytest = "^7.2.2"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
